--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.5",
     "@graphql-codegen/client-preset": "^1.3.0",
-    "dotenv": "^16.0.3"
+    "@types/jest": "^29.4.0",
+    "dotenv": "^16.0.3",
+    "jest": "^29.4.1",
+    "ts-jest": "^29.0.5"
   }
 }
