--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "graphql-codegen"
+    "codegen": "graphql-codegen --watch"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -21,11 +21,13 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "urql": "^3.0.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.16.5",
     "@graphql-codegen/client-preset": "^1.3.0",
+    "@graphql-codegen/typescript-urql": "^3.7.3",
     "@types/jest": "^29.4.0",
     "dotenv": "^16.0.3",
     "jest": "^29.4.1",
