--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "fast-stats": "^0.0.6",
     "graphql": "^16.6.0",
     "next": "13.1.6",
     "react": "18.2.0",
