--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@graphql-codegen/cli": "^2.16.5",
     "@graphql-codegen/client-preset": "^1.3.0",
     "@graphql-codegen/typescript-urql": "^3.7.3",
+    "@types/fast-stats": "^0.0.32",
     "@types/jest": "^29.4.0",
     "dotenv": "^16.0.3",
     "jest": "^29.4.1",
