--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "push": "yarn verify && git push"
   },
   "dependencies": {
+    "@mui/base": "^5.0.0-alpha.116",
     "@next/font": "13.1.6",
     "@stitches/react": "^1.2.8",
     "@tanstack/react-table": "^8.7.9",
