--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
     "typescript": "4.9.5",
     "urql": "^3.0.3"
